--- a/app/src/main/res/layout/activity_new_entry.xml
+++ b/app/src/main/res/layout/activity_new_entry.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="20dp"
-    >
+    android:padding="20dp">
 
 
     <EditText
@@ -12,8 +12,7 @@
         android:layout_height="wrap_content"
         android:text=""
         android:hint="NAME"
-        android:layout_margin="20dp"
-        />
+        android:layout_margin="20dp" />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
