--- a/app/src/main/res/menu/entry_menu.xml
+++ b/app/src/main/res/menu/entry_menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/save_button"
         android:icon="@drawable/ic_save"
         app:showAsAction="always"
         android:orderInCategory="100"
+        android:onClick="saveEntry"
         android:title="Save Entry" />
 </menu>
