--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -3,18 +3,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:id="@+id/group1"
+    <group
+        android:id="@+id/group1"
         android:checkableBehavior="single">
         <item
             android:id="@+id/nav_dashboard"
             android:icon="@drawable/ic_dashboard"
             android:title="Dashboard" />
+    </group>
+
+    <group android:id="@+id/group2">
         <item
             android:id="@+id/nav_changepass"
             android:icon="@drawable/ic_wallet"
             android:title="Change Wallet Password" />
     </group>
-    <group android:id="@+id/group2">
+
+    <group android:id="@+id/group4">
+        <item
+            android:id="@+id/nav_sync"
+            android:icon="@drawable/ic_upload"
+            android:title="Sync with Drive" />
+    </group>
+
+    <group android:id="@+id/group3">
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_logout"
