--- a/app/src/main/res/menu/menu_bar.xml
+++ b/app/src/main/res/menu/menu_bar.xml
@@ -2,25 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/search_button"
-        android:orderInCategory="100"
+        android:id="@+id/search"
         android:icon="@drawable/ic_search"
-        app:showAsAction="always"
+        android:orderInCategory="100"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="always|collapseActionView"
         android:title="SearchButton" />
 
     <item
         android:id="@+id/sync"
-        android:orderInCategory="100"
         android:title="Sync"
         app:showAsAction="never" />
     <item
         android:id="@+id/del_data"
-        android:orderInCategory="100"
         android:title="Delete Database"
         app:showAsAction="never" />
     <item
         android:id="@+id/how_to_use"
-        android:orderInCategory="100"
         android:title="How to Use App"
         app:showAsAction="never" />
 </menu>
