--- a/app/src/main/res/layout/activity_changepass.xml
+++ b/app/src/main/res/layout/activity_changepass.xml
@@ -1,40 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient2"
     android:orientation="vertical"
-    android:padding="20dp"
-    android:background="@android:color/holo_red_light"
-    >
+    android:padding="20dp">
 
-
-    <EditText
-        android:id="@+id/currentPassword"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Current Password"
-        android:layout_margin="20dp"
-        />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="New Password"
-        android:layout_margin="20dp"
-        android:id="@+id/newPassword" />
+        android:layout_marginTop="20dp"
+        android:elevation="10dp"
+        app:cardCornerRadius="50dp">
 
-    <EditText
+        <EditText
+            android:id="@+id/currentPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:hint="Current Password" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Confirm Password"
-        android:inputType="textPassword"
-        android:layout_margin="20dp"
-        android:id="@+id/confirmPassword" />
+        android:layout_marginTop="20dp"
+        android:elevation="10dp"
+        app:cardCornerRadius="50dp">
+
+        <EditText
+            android:id="@+id/newPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:hint="New Password" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:elevation="10dp"
+        app:cardCornerRadius="50dp">
+
+        <EditText
+            android:id="@+id/confirmPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:hint="Confirm Password"
+            android:inputType="textPassword" />
+    </androidx.cardview.widget.CardView>
 
     <Button
         android:id="@+id/proceedToPassChange"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
+        android:layout_margin="40dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="20dp"
+        android:background="@color/colorPrimary"
+        android:textColor="#fff"
         android:text="Proceed" />
 
 </LinearLayout>
