--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="176dp"
-    android:background="@color/colorAccent"
+    android:layout_height="200dp"
+    android:background="@drawable/bg_pass_wall"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="16dp"
@@ -12,8 +12,8 @@
         android:id="@+id/user_dp"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:background="@drawable/ic_userdp"
-        android:src="@mipmap/ic_launcher_round"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/ic_userdp"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp" />
 
