--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@android:color/holo_red_light"
     tools:showIn="navigation_view">
 
     <group
@@ -18,9 +19,13 @@
 
     <group android:id="@+id/group2">
         <item
-            android:id="@+id/nav_sync"
+            android:id="@+id/nav_upload"
             android:icon="@drawable/ic_upload"
-            android:title="Sync with Drive" />
+            android:title="Upload to Drive" />
+        <item
+            android:id="@+id/nav_download"
+            android:icon="@drawable/ic_download"
+            android:title="Download from Drive" />
     </group>
 
     <group android:id="@+id/group3">
