--- a/app/src/main/res/layout/activity_entry_item.xml
+++ b/app/src/main/res/layout/activity_entry_item.xml
@@ -12,8 +12,9 @@
         android:id="@+id/catName"
         android:layout_width="match_parent"
         android:layout_height="75dp"
-        android:background="@android:color/holo_red_light"
+        android:background="@color/colorUiLightRed"
         android:gravity="center"
+        android:fontFamily="@font/rock_salt"
         android:text="Category Name"
         android:textAlignment="center"
         android:textColor="@android:color/white"
