--- a/app/src/main/res/layout/activity_changepass.xml
+++ b/app/src/main/res/layout/activity_changepass.xml
@@ -18,6 +18,7 @@
             android:id="@+id/currentPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/marko_one"
             android:layout_margin="20dp"
             android:hint="Current Password" />
     </androidx.cardview.widget.CardView>
@@ -33,6 +34,7 @@
             android:id="@+id/newPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/marko_one"
             android:layout_margin="20dp"
             android:hint="New Password" />
     </androidx.cardview.widget.CardView>
@@ -48,6 +50,7 @@
             android:id="@+id/confirmPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/marko_one"
             android:layout_margin="20dp"
             android:hint="Confirm Password"
             android:inputType="textPassword" />
@@ -58,6 +61,7 @@
         android:layout_width="200dp"
         android:layout_margin="40dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/rock_salt"
         android:layout_gravity="center"
         android:background="@color/colorPrimary"
         android:textColor="#fff"
