--- a/app/src/main/res/layout/activity_entries.xml
+++ b/app/src/main/res/layout/activity_entries.xml
@@ -14,6 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
+            android:fontFamily="@font/merienda_one"
+            android:textColor="@android:color/white"
             android:text="No Entry to display..."
             android:textAlignment="center"
             android:visibility="gone" />
