--- a/app/src/main/res/menu/menu_bar.xml
+++ b/app/src/main/res/menu/menu_bar.xml
@@ -12,6 +12,7 @@
     <item
         android:id="@+id/del_data"
         android:title="Delete Database"
+        android:onClick="deleteDatabase"
         app:showAsAction="never" />
     <item
         android:id="@+id/how_to_use"
