--- a/app/src/main/res/drawable/gradient1.xml
+++ b/app/src/main/res/drawable/gradient1.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:angle="45"
-        android:endColor="#b71c1c"
-        android:startColor="#0d47a1" />
+        android:angle="315"
+        android:centerColor="#283593"
+        android:endColor="#212121"
+        android:startColor="#ff8a80" />
 </shape>
