--- a/app/src/main/res/drawable/gradient2.xml
+++ b/app/src/main/res/drawable/gradient2.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:angle="135"
-        android:endColor="#43b4ef"
-        android:startColor="#d50000" />
+        android:angle="270"
+        android:centerColor="#d32f2f"
+        android:endColor="#263238"
+        android:startColor="#ff8a65" />
 </shape>
