--- a/app/src/main/res/layout/activity_entries.xml
+++ b/app/src/main/res/layout/activity_entries.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient1">
+    android:background="@drawable/gradient1"
+    android:backgroundTint="@android:color/darker_gray"
+    android:backgroundTintMode="multiply">
 
     <LinearLayout
         android:layout_width="match_parent"
